--- a/config.env
+++ b/config.env
@@ -9,11 +9,11 @@ MLFLOW_PORT=5000
 MLFLOW_BUCKET_NAME=mlflow
 
 # MinIO access keys - these are needed by MLflow
-MINIO_ACCESS_KEY=LbhAvOlTGAS4hZA9vE0v
-MINIO_SECRET_ACCESS_KEY=EMRydPWksmYyaRLT3k5wV9CvF029vckuXIOVEQ9Z
+MINIO_ACCESS_KEY=<KEY>
+MINIO_SECRET_ACCESS_KEY=<KEY>
 
-AWS_ACCESS_KEY_ID=LbhAvOlTGAS4hZA9vE0v
-AWS_SECRET_ACCESS_KEY=EMRydPWksmYyaRLT3k5wV9CvF029vckuXIOVEQ9Z
+AWS_ACCESS_KEY_ID=<KEY>
+AWS_SECRET_ACCESS_KEY=<KEY>
 
 # MinIO configuration
 MINIO_ROOT_USER: 'minio_user'
