--- a/config.env
+++ b/config.env
@@ -7,6 +7,8 @@ PG_PORT=5432
 # MLflow configuration
 MLFLOW_PORT=5000
 MLFLOW_BUCKET_NAME=mlflow
+MLFLOW_TRACKING_USERNAME=username
+MLFLOW_TRACKING_PASSWORD=password
 
 # MinIO access keys - these are needed by MLflow
 MINIO_ACCESS_KEY=<KEY>
@@ -23,3 +25,4 @@ MINIO_STORAGE_USE_HTTPS: False
 MINIO_CONSOLE_ADDRESS: ':9001'
 MINIO_PORT=9000
 MINIO_CONSOLE_PORT=9001
+
